gave home page boxes colors

--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,29 @@
 .hm {
     width: 50%;
     height: 50%;
+    box-sizing: border-box;
 }
 
 .hm_map {
-    background: #ccc;
+    background: rgb(60, 120, 216);
     float: left;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .hm_locations {
-    background: #bbb;
+    background: rgb(60, 120, 216);
     float: right;
+    border-bottom: 1px solid black;
 }
 
 .hm_emergency {
-    background: #aaa;
+    background: rgb(204, 0, 0);
     float: left;
+    border-right: 1px solid black;
 }
 
 .hm_settings {
-    background: #ddd;
+    background: rgb(60, 120, 216);
     float: right;
 }
