--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@
 .page-banner {
     background: rgb(99, 210, 151);
     height: 10%;
+    border-bottom: 1px solid black;
 }
 
 .page {
@@ -53,4 +54,18 @@
 
 .button {
     background: rgb(60, 120, 216);
+}
+
+.left {
+    float: left;
+    width: 25%;
+    height: 100%;
+    border-right: 1px solid black;
+}
+
+.right {
+    float: right;
+    width: 25%;
+    height: 100%;
+    border-left: 1px solid black;
 }
