--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,15 @@
     border-bottom: 1px solid black;
 }
 
+label.banner {
+    font-size: x-large;
+    color: black;
+}
+
+.banner-icon {
+    padding-top: 5px;
+}
+
 .page {
     background: rgb(201, 218, 248);
     height: 90%;
