--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,10 @@
 .nineoneone{
     background: rgb(256, 0, 0);
     float: left;
+    text-align: center;
+    text-indent: 0;
     font-family: sans-serif;
-    font-size: large;
+    font-size: xx-large;
     margin-top: 50px;
     border: 1px solid black;
 }
