--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,27 @@
 .anchor {
     cursor: pointer;
 }
+
+.location{
+    width: 85%;
+    height: 10%;
+    text-align: left;
+    text-indent: 3%;
+    vertical-align: middle;
+    margin-top: 5%;
+    margin-left: 7.5%;
+    padding-top: 1%;
+    background: rgb(60, 120, 216);
+    float: left;
+    font-family: sans-serif;
+    font-size: large;
+    border: 1px solid black;
+}
+
+.loc_name {
+    text-align: left;
+    text-indent: 3%;
+    margin-top: 0%;
+    padding-top: 0%;
+    white-space: pre;
+}
