--- a/css/style.css
+++ b/css/style.css
@@ -171,9 +171,19 @@
 }
 
 .loc_name {
+    float: left;
+    width: 30%;
     text-align: left;
     text-indent: 3%;
     margin-top: 0%;
     padding-top: 0%;
     white-space: pre;
+}
+
+.loc_map {
+    font-size: small;
+    float: left;
+    width: 15%;
+    text-align: left;
+    cursor: pointer;
 }
