--- a/css/style.css
+++ b/css/style.css
@@ -197,3 +197,23 @@
     color: black;
     font-size: xx-large;
 }
+
+.table-header {
+    margin-left: 7.5%;
+    width: 85%;
+}
+
+.table-header-row {
+    float: left;
+    text-align: left;
+    color: black;
+    font-size: medium;
+}
+
+.table-header-row:nth-child(1) {
+    width: 30%;
+}
+
+.table-header-row:nth-child(2) {
+    width: 15%;
+}
