--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,15 @@
     cursor: pointer;
 }
 
+.loc_edit {
+    font-size: small;
+    float: left;
+    width: 15%;
+    text-align: left;
+    cursor: pointer;
+    padding-left: 5%;
+}
+
 .alt {
     background: rgb(109, 158, 235);
 }
@@ -216,4 +225,8 @@
 
 .table-header-row:nth-child(2) {
     width: 15%;
+}
+
+.table-header-row:nth-child(2) {
+    width: 20%;
 }
