--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,6 @@
 .location{
     width: 85%;
     height: 10%;
-    text-align: left;
     text-indent: 3%;
     vertical-align: middle;
     margin-left: 7.5%;
@@ -196,6 +195,18 @@
     padding-left: 5%;
 }
 
+.loc_approved {
+    vertical-align: middle;
+    float: left;
+    width: 35%;
+}
+
+.loc-center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 .alt {
     background: rgb(109, 158, 235);
 }
@@ -224,9 +235,13 @@
 }
 
 .table-header-row:nth-child(2) {
-    width: 15%;
+    width: 20%;
 }
 
-.table-header-row:nth-child(2) {
+.table-header-row:nth-child(3) {
     width: 20%;
+}
+
+.table-header-row:nth-child(4) {
+    width: 30%;
 }
