--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,8 @@
 
 .page {
     background: rgb(201, 218, 248);
-    height: 90%;
+    height: 87.5%;
+    padding-top: 5%;
 }
 
 .map {
@@ -171,6 +172,26 @@
     font-family: sans-serif;
     font-size: large;
     /*border: 1px solid black;*/
+}
+
+.navigation{
+    width: 41%;
+    height: 20%;
+    text-indent: 3%;
+    vertical-align: middle;
+    margin-left: 6%;
+    margin-bottom: 6%;
+    padding-top: 1%;
+    background: rgb(60, 120, 216);
+    float: left;
+    font-family: sans-serif;
+    font-size: large;
+    /*border: 1px solid black;*/
+}
+
+.nav-text{
+    text-align: center;
+    padding-top: 23%;
 }
 
 .loc_name {
