--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,22 @@
 .directions{
     width: 70%;
     height: 80%;
-    margin-top: 1%;
-    padding-top: 3%;
+    
+    padding-top: 5%;
     vertical-align: middle;
+}
+
+.hospitalInfo{
+    background: rgb(60, 120, 216);
+    font-family: sans-serif;
+    font-size: medium;
+    text-align: left;
+    height: 10%;
+    padding-top: 5%;
+    vertical-align: middle;    
+    padding-left: 3%;
+    border: 1px solid black;
+
 }
 .hospitals{
     background: rgb(60, 120, 216);
@@ -153,6 +166,7 @@
     font-family: sans-serif;
     font-size: xx-large;
     margin-top: 50px;
+    padding-bottom: 5%;
     border: 1px solid black;
 }
 .anchor {
