added functionality to devices page
made it so you can add and remove devices.  this will only last as long
as you are on the page.  there is no permanence at all.

--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,59 @@
     padding-top: 5px;
 }
 
+.save-text{
+    background-color: rgb(151, 158, 175);
+    width: 40%;
+    margin-left: 5%;
+    margin-top: 4%;
+    height: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    display: inline-block;
+    float: left;
+}
+
+.cancel-text{
+    background-color: rgb(151, 158, 175);
+    width: 40%;
+    margin-right: 5%;
+    margin-top: 4%;
+    height: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    display: inline-block;
+    float: right;
+}
+
+.removed {
+    float: right;
+    margin-right: 8px;
+    margin-top: 3px;
+}
+
 .page {
     background: rgb(201, 218, 248);
     height: 87.5%;
     padding-top: 5%;
+}
+
+.name-title{
+    display: inline-block;
+    margin-top: 5%;
+    font-size: 23px;
+}
+
+#new-name{
+    font-size: 18px;
+}
+
+.add-child{
+    background: rgb(60, 120, 216);
+    height: 18%;
+    width: 85%;
+    margin-top: 3%;
+    margin-left: 7.5%;
+    float: left;
 }
 
 .map {
@@ -200,12 +249,35 @@
     float: left;
     font-family: sans-serif;
     font-size: large;
+    cursor: pointer;
     /*border: 1px solid black;*/
 }
 
 .nav-text{
     text-align: center;
     padding-top: 23%;
+}
+
+.add-device{
+    font-size: 25px;
+    font-weight: bold;
+    vertical-align: middle;
+    padding-top: 14px;
+}
+
+.add-d{
+    width: 85%;
+    height: 10%;
+    text-indent: 3%;
+    vertical-align: middle;
+    margin-left: 7.5%;
+    margin-bottom: 2%;
+    padding-top: 1%;
+    background: rgb(151, 158, 175);
+    float: left;
+    font-family: sans-serif;
+    font-size: large;
+    margin-top: 15px;
 }
 
 .loc_name {
