--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,11 @@
     font-weight: bold;
     display: inline-block;
     float: left;
+    cursor: pointer;
 }
 
 .cancel-text{
-    background-color: rgb(151, 158, 175);
+    background-color: rgb(237, 88, 58);
     width: 40%;
     margin-right: 5%;
     margin-top: 4%;
@@ -87,12 +88,14 @@
     font-weight: bold;
     display: inline-block;
     float: right;
+    cursor: pointer;
 }
 
 .removed {
     float: right;
     margin-right: 8px;
     margin-top: 3px;
+    cursor: pointer;
 }
 
 .page {
@@ -118,6 +121,7 @@
     margin-top: 3%;
     margin-left: 7.5%;
     float: left;
+    
 }
 
 .map {
@@ -263,6 +267,7 @@
     font-weight: bold;
     vertical-align: middle;
     padding-top: 14px;
+    cursor: pointer;
 }
 
 .add-d{
