--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,27 @@
     border: 1px solid black;
 }
 
+.options-bar {
+	background: rgb(60, 120, 216);
+	float: left;
+	font-family: sans-serif;
+	font-size: large;
+	border: 1px solid black;
+	width: 85%;
+	height: 10%;
+	text-align: left;
+	text-indent: 3%;
+	vertical-align: middle;
+	margin-top: 5%;
+	margin-left: 7.5%;
+	padding-top: 10%;
+}
+
+.options-bar-option {
+	float: right;
+	padding-top: 0%;
+}
+
 .nineoneone{
     background: rgb(256, 0, 0);
     float: left;
