--- a/css/style.css
+++ b/css/style.css
@@ -420,3 +420,29 @@
     top: 50%;
     transform: translateY(-60%);
 }
+
+.child{
+    display: inline-block;
+    width: 85%;
+    height: 10%;
+    text-indent: 3%;
+    vertical-align: middle;
+    margin-left: 7.5%;
+    margin-bottom: 2%;
+    padding-top: 1%;
+    float: left;
+    font-family: sans-serif;
+    font-size: x-large;
+    cursor: pointer;
+}
+
+.child-name {
+    float: left;
+    vertical-align: middle;
+    width: 30%;
+    text-align: left;
+    text-indent: 3%;
+    margin-top: 5%;
+    padding-top: 0%;
+    white-space: pre;
+}
