--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,19 @@ input[id^='new-']{
     
 }
 
+.add-location{
+    background: rgb(60, 120, 216);
+    height: 25%;
+    width: 85%;
+    position: absolute;
+    left: 0%;
+    top: 50%;
+    margin-top: 3%;
+    margin-left: 7.5%;
+    float: left;
+    
+}
+
 .map {
     background: #CCC;
     height: 80%;
