--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,15 @@ ul{
     white-space: pre;
 }
 
+.loc_name2 {
+    float: left;
+    width: 30%;
+    text-align: left;
+    text-indent: 0%;
+    margin-top: 0%;
+    padding-top: 0%;
+}
+
 .loc_map {
     font-size: small;
     float: left;
